# signaldeck-plugin-energy

./: pyproject.toml
signaldeck_plugin_energy/locales/: de.json  en.json
signaldeck_plugin_energy/processors/battery/: battery_control_display_data.py  metersimulator.py
signaldeck_plugin_energy/processors/gw/: inverter.py
signaldeck_plugin_energy/processors/myenergi/: zappi.py
signaldeck_plugin_energy/processors/pvoverview/: display_data.py  pv.py
signaldeck_plugin_energy/samples/PvOverview/: config.json
signaldeck_plugin_energy/templates/energy/: battery_control.html  pvoverview_state.html  zappi_control.html
